Adding nex version from github
git-svn-id: https://plugins.svn.wordpress.org/wp-results/trunk@1228715 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/list-style.css
+++ b/css/list-style.css
@@ -1,3 +1,17 @@
+/* -- Filters -- */
+select{
+	padding: 4px 5px 5px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	font-size: 14px;
+	background-color: #efefef;
+}
+button{
+	font-size: 24px !important;
+	padding: 11px 20px !important;
+}
+
+/* -- lists -- */
 .wp_list{
 	display:table;
 	width:100%;
